--- a/src/components/notes.css
+++ b/src/components/notes.css
@@ -1,35 +1,72 @@
-html ,body{
+html {
     width: 100%;
     height: 100%;
+}
+
+body{
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+div{
+    margin: 0;
+    padding: 0;
 }
 .wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .the-form{
     display: flex;
     flex-direction: column;
     width: 20%;
-    align-self: center;
+    justify-content: center;
 }
 
 ul{
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: row;
 }
 
 li{
+    border: 1px solid white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     list-style-type: none;
     margin-left: 1rem;
+    width: 10rem;
+    overflow: hidden;
 }
 
 textarea{
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
     height: 200px;
     width: auto;
     resize: none;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+input{
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+    border-radius: 10px;
+    margin-bottom: 1rem;
 }
 
+input[type=submit]{
+    width: 10rem;
+    align-self: center;
+}
 .modal-wrapper{
     display: flex;
     flex-direction: column;
@@ -41,4 +78,95 @@ textarea{
     flex-direction: column;
     width: 20%;
     height: 100%;
+}
+
+.button-wrap{
+    padding-bottom: 1rem;
+
+}
+button {
+    
+    width: 150px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+button:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+button:active {
+    color: #000
+}
+
+button:active:after {
+    background: transparent;
+}
+
+button:hover:before {
+    opacity: 1;
+}
+
+button:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+.note-wrap{
+    
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.remove-div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
